src/views/components/task-view/task-view.scss
@import 'views/styles/shared';

.task-view-container {
  border-radius: 3px 3px 0 0;
  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.15);
  background: white;
  line-height: 1.1em;
  margin-bottom: 2em;
  z-index: 10;
  font-size: 18px;
}

@media (max-width: 767px) {
  .task-view-container {
    height: 87%;
    width: 94%;
  }
}

.task-view-loader {
  min-height: 18.35em;
}

@media screen and (max-width: 767px) {
  .task-view-loader {
    min-height: auto;
    line-height: 0;
  }
}

.task-view-bottom-loader {
  min-height: 23.35em;
}

.task-view {
  padding: 10px 20px;
  max-height: 19.35em;
  overflow-y: auto;
  
  textarea {
    resize:none;
    font-family: $base-font-family;
  }

  input:disabled, select:disabled, textarea:disabled {
    background: none;
  }

  .Select {
    vertical-align: middle;
  }

  .Select-value {
    background-color: white;
    padding-right: 0 !important;
  }

  .Select-control {
    width: 200px !important;
    border: none !important;
    font-size: 18px;

  
    &:hover {
      border: 1px solid #ccc !important;
    }

  }
  
  .Select-menu-outer {
    width: 200px !important;
  }

  .button-save {
    margin: 10px 6px;
  }

  .label {
    vertical-align: top;
    margin-top: .7em;
  }

  .is-critical {
    margin-bottom: 10px;
  }
  
}

.changing-input {
  width: 100%; //TODO
  transition: border-color 100ms;
  font-size: 18px;
  padding: 5px;
  border: none;
  text-rendering: optimizeSpeed;
  vertical-align: top;
  border-color: white;
  overflow: hidden;
}

.editable {
  &:hover {
    border: 1px solid #d5dce0;
    padding: 4px;
  }
}

.react-tagsinput-changing {
  border: none;
  overflow: hidden;
  padding: 5px 1px 1px 1px;
  width: calc(100% - 60px);
  display: inline-block;
  
  input {
    font-size: 18px;
    font-family: $base-font-family;
    width: calc( 100% - 130px);
  }
}

